--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,6 @@
 PORT = 4000
 NODE_ENV = DEVELOPMENT
 DB_LOCAL_URI = mongodb://localhost:27017/shopex
+JWT_SECRET = KSFNJSDNAfdskg787bd/JKNSDKJNGJ23UIY4NS@23.U988
+JWT_EXPIRES_TIME = 1d
+COOKIE_EXPIRES_TIME = 1
