--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,7 @@
 PORT = 4000
 NODE_ENV = DEVELOPMENT
 DB_LOCAL_URI = mongodb://localhost:27017/shopex
+DB_REMOTE_URI = mongodb+srv://shopex:xlJOFMWOY4xLpoHK@cluster0.cdkp2n4.mongodb.net/shopex
 JWT_SECRET = KSFNJSDNAfdskg787bd/JKNSDKJNGJ23UIY4NS@23.U988
 JWT_EXPIRES_TIME = 1d
 COOKIE_EXPIRES_TIME = 1
