--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "mdbreact": "^5.2.0",
+    "rc-slider": "^10.0.1",
+    "rc-tooltip": "^5.2.2",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
