Implementado login y registro de usuario
Se implementado el login y el registro de usuarios cargando un avatar y guardandole en cloudinary.

Co-Authored-By: CarlxMD <111185321+CarlxMD@users.noreply.github.com>
Co-Authored-By: Catalina Taborda <111291186+Catalina-2022@users.noreply.github.com>
Co-Authored-By: Alexander Carvajal Oquendo <111202801+alexcarvajalo@users.noreply.github.com>
Co-Authored-By: Alejandra Vásquez <111295198+malejis140292@users.noreply.github.com>

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -5,3 +5,7 @@ DB_REMOTE_URI = mongodb+srv://shopex:xlJOFMWOY4xLpoHK@cluster0.cdkp2n4.mongodb.n
 JWT_SECRET = KSFNJSDNAfdskg787bd/JKNSDKJNGJ23UIY4NS@23.U988
 JWT_EXPIRES_TIME = 1d
 COOKIE_EXPIRES_TIME = 1
+CLOUDINARY_CLOUD_NAME = innovedcol
+CLOUDINARY_API_KEY = 936188342672981
+CLOUDINARY_API_SECRET = rCuZi_-jMLF3VBUz6B9UI4Wc5Ls
+CLOUDINARY_URL = cloudinary://936188342672981:rCuZi_-jMLF3VBUz6B9UI4Wc5Ls@innovedcol
