--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "cloudinary": "^1.32.0",
     "mdbreact": "^5.2.0",
     "rc-slider": "^10.0.1",
-    "rc-tooltip": "^5.2.2",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
