--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,4 +1,5 @@
 PORT = 4000
+FRONT_PORT = 3000
 NODE_ENV = DEVELOPMENT
 DB_LOCAL_URI = mongodb://localhost:27017/shopex
 DB_REMOTE_URI = mongodb+srv://shopex:xlJOFMWOY4xLpoHK@cluster0.cdkp2n4.mongodb.net/shopex
