--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "cloudinary": "^1.32.0",
+    "mdb-react-ui-kit": "^5.0.0",
     "mdbreact": "^5.2.0",
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
