--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "cloudinary": "^1.32.0",
-    "mdb-react-ui-kit": "^5.0.0",
     "mdbreact": "^5.2.0",
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
@@ -21,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
+    "react-native-uuid": "^2.0.1",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
