--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "dev": "set NODE_ENV=DEVELOPMENT&nodemon backend/server",
-    "prod": "set NODE_ENV=PRODUCTION&nodemon backend/server",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false && NODE_OPTIONS=--openssl-legacy-provider && npm install --force --prefix frontend && npm run build --prefix frontend"
+    "dev": "SET NODE_ENV=DEVELOPMENT&nodemon backend/server",
+    "prod": "SET NODE_ENV=PRODUCTION&nodemon backend/server"
   },
   "repository": {
     "type": "git",
