--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,15 @@
-FROM node
+FROM node:16
 
 WORKDIR /app
 
-COPY package.json .
+COPY package.json ./
+
+COPY package-lock.json ./
 
 RUN npm install
 
-COPY . .
+COPY ./ ./
 
 EXPOSE 4000
 
-CMD ["npm", "run dev"]
+CMD ["npm", "run", "start"]
