--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,15 @@
-FROM node
+FROM node:16
 
 WORKDIR /app
 
-COPY package.json .
+COPY package.json ./
+
+COPY package-lock.json ./
 
 RUN npm install --force
 
-COPY . .
+COPY ./ ./
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
