--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "Tienda virtual de articulos tecnologicos",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT&nodemon backend/server",
-    "prod": "SET NODE_ENV=PRODUCTION&nodemon backend/server"
+    "start": "node server.js",
+    "dev": "set NODE_ENV=DEVELOPMENT&nodemon server",
+    "prod": "set NODE_ENV=PRODUCTION&nodemon server"
   },
   "repository": {
     "type": "git",
