--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,23 @@
 FROM node:16
 
-WORKDIR /app
+# WORKDIR /app
 
-COPY package.json ./
+# COPY package.json ./
 
-COPY package-lock.json ./
+# COPY package-lock.json ./
+
+# RUN npm install --force
+
+# COPY ./ ./
+
+# EXPOSE 3000
+
+# CMD ["npm", "run", "start"]
+
+COPY . .
 
 RUN npm install --force
 
-COPY ./ ./
-
 EXPOSE 3000
 
-CMD ["npm", "run", "start"]
+ENTRYPOINT [ "npm", "run", "build" ]
