--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+backend/config/config.env
+backend/config/*.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -125,3 +127,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
