--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,5 +58,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://shopex-production.up.railway.app/"
+  "proxy": "https://shopex-production.up.railway.app"
 }
